--- a/index.html
+++ b/index.html
@@ -1,71 +1,86 @@
-<div class="autopark__slider">
-					<button class="autopark__arrow autopark__arrow-left"></button>
-					<div class="autopark__content">
-						<div class="autopark__item autopark__item-1">
-							<div class="autopark__specifications">
-								<h4>Газель 3 метра</h4>
-								<div>
-									<p>Ширина 2 м</p>
-									<p>Высота 2 м</p>
-									<p>Объем 16 м³</p>
-									<p>Грузоподъемность 1,5 т</p>
-								</div>
-								<a href="" class="btn-order autopark__btn-order">Заказать</a>
-							</div>
-							<img src="assets/img/truck.jpg" class="autopark__img" alt="">
-						</div>
-						<div class="autopark__item autopark__item-2 hide_item">
-							<div class="autopark__specifications">
-								<h4>Газель 4 метра</h4>
-								<div>
-									<p>Ширина 2 м</p>
-									<p>Высота 2 м</p>
-									<p>Объем 16 м³</p>
-									<p>Грузоподъемность 1,5 т</p>
-								</div>
-								<a href="" class="btn-order autopark__btn-order">Заказать</a>
-							</div>
-							<img src="assets/img/truck.jpg" class="autopark__img" alt="">
-						</div>
-						<div class="autopark__item autopark__item-3 hide_item">
-							<div class="autopark__specifications">
-								<h4>Газель 5 метра</h4>
-								<div>
-									<p>Ширина 2 м</p>
-									<p>Высота 2 м</p>
-									<p>Объем 16 м³</p>
-									<p>Грузоподъемность 1,5 т</p>
-								</div>
-								<a href="" class="btn-order autopark__btn-order">Заказать</a>
-							</div>
-							<img src="assets/img/truck.jpg" class="autopark__img" alt="">
-						</div>
-						<div class="autopark__item autopark__item-4 hide_item">
-							<div class="autopark__specifications">
-								<h4>Газель 6 метра</h4>
-								<div>
-									<p>Ширина 2 м</p>
-									<p>Высота 2 м</p>
-									<p>Объем 16 м³</p>
-									<p>Грузоподъемность 1,5 т</p>
-								</div>
-								<a href="" class="btn-order autopark__btn-order">Заказать</a>
-							</div>
-							<img src="assets/img/truck.jpg" class="autopark__img" alt="">
-						</div>
-						<div class="autopark__item autopark__item-5 hide_item">
-							<div class="autopark__specifications">
-								<h4>Газель 7 метра</h4>
-								<div>
-									<p>Ширина 2 м</p>
-									<p>Высота 2 м</p>
-									<p>Объем 16 м³</p>
-									<p>Грузоподъемность 1,5 т</p>
-								</div>
-								<a href="" class="btn-order autopark__btn-order">Заказать</a>
-							</div>
-							<img src="assets/img/truck.jpg" class="autopark__img" alt="">
-						</div>
-					</div>
-					<button class="autopark__arrow autopark__arrow-right"></button>
-				</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Slider -->
+    <div class="autopark__slider">
+        <button class="autopark__arrow autopark__arrow-left"></button>
+        <div class="autopark__content">
+            <div class="autopark__item autopark__item-1">
+                <div class="autopark__specifications">
+                    <h4>Газель 3 метра</h4>
+                    <div>
+                        <p>Ширина 2 м</p>
+                        <p>Высота 2 м</p>
+                        <p>Объем 16 м³</p>
+                        <p>Грузоподъемность 1,5 т</p>
+                    </div>
+                    <a href="" class="btn-order autopark__btn-order">Заказать</a>
+                </div>
+                <img src="assets/img/truck.jpg" class="autopark__img" alt="">
+            </div>
+            <div class="autopark__item autopark__item-2 hide_item">
+                <div class="autopark__specifications">
+                    <h4>Газель 4 метра</h4>
+                    <div>
+                        <p>Ширина 2 м</p>
+                        <p>Высота 2 м</p>
+                        <p>Объем 16 м³</p>
+                        <p>Грузоподъемность 1,5 т</p>
+                    </div>
+                    <a href="" class="btn-order autopark__btn-order">Заказать</a>
+                </div>
+                <img src="assets/img/truck.jpg" class="autopark__img" alt="">
+            </div>
+            <div class="autopark__item autopark__item-3 hide_item">
+                <div class="autopark__specifications">
+                    <h4>Газель 5 метра</h4>
+                    <div>
+                        <p>Ширина 2 м</p>
+                        <p>Высота 2 м</p>
+                        <p>Объем 16 м³</p>
+                        <p>Грузоподъемность 1,5 т</p>
+                    </div>
+                    <a href="" class="btn-order autopark__btn-order">Заказать</a>
+                </div>
+                <img src="assets/img/truck.jpg" class="autopark__img" alt="">
+            </div>
+            <div class="autopark__item autopark__item-4 hide_item">
+                <div class="autopark__specifications">
+                    <h4>Газель 6 метра</h4>
+                    <div>
+                        <p>Ширина 2 м</p>
+                        <p>Высота 2 м</p>
+                        <p>Объем 16 м³</p>
+                        <p>Грузоподъемность 1,5 т</p>
+                    </div>
+                    <a href="" class="btn-order autopark__btn-order">Заказать</a>
+                </div>
+                <img src="assets/img/truck.jpg" class="autopark__img" alt="">
+            </div>
+            <div class="autopark__item autopark__item-5 hide_item">
+                <div class="autopark__specifications">
+                    <h4>Газель 7 метра</h4>
+                    <div>
+                        <p>Ширина 2 м</p>
+                        <p>Высота 2 м</p>
+                        <p>Объем 16 м³</p>
+                        <p>Грузоподъемность 1,5 т</p>
+                    </div>
+                    <a href="" class="btn-order autopark__btn-order">Заказать</a>
+                </div>
+                <img src="assets/img/truck.jpg" class="autopark__img" alt="">
+            </div>
+        </div>
+        <button class="autopark__arrow autopark__arrow-right"></button>
+    </div>
+    <!-- Script -->
+    <script src="script.js"></script>
+</body>
+</html>
